Photo title overflow fix

--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -329,6 +329,10 @@ input:focus {
   position: relative;
   width: 100%;
   margin-top: 15px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer>.checkbox {
@@ -352,6 +356,11 @@ input:focus {
   font-size: 24px;
   color: #4D4D4D;
   text-align: center;
+
+  max-width: 170px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .date {
